--- a/common-library/build.gradle
+++ b/common-library/build.gradle
@@ -4,6 +4,8 @@ plugins {
 }
 
 apply from: 'publish_config.gradle'
+group = group_id
+
 
 if(uploadto == "github"){
     apply from: 'publish_github.gradle'
@@ -48,3 +50,17 @@ dependencies {
     compileOnly "androidx.recyclerview:recyclerview:$recycler_view_version"
 }
 
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = group_id
+                artifactId = artifact_id
+                version = version_name
+            }
+        }
+    }
+}
