--- a/common-library/build.gradle
+++ b/common-library/build.gradle
@@ -11,7 +11,10 @@ if(uploadto == "github"){
     apply from: 'publish_github.gradle'
 }else if(uploadto == "mavenCentral"){
     apply from: 'publish_maven.gradle'
-}else {
+}else if(uploadto == "jitpack"){
+
+}
+else {
     throw new Exception("uploadto invalid.github or mavenCentral")
 }
 
@@ -50,16 +53,17 @@ dependencies {
     compileOnly "androidx.recyclerview:recyclerview:$recycler_view_version"
 }
 
-
-afterEvaluate {
-    publishing {
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                from components.release
-                groupId = group_id
-                artifactId = artifact_id
-                version = version_name
+if(uploadto == "jitpack") {
+    afterEvaluate {
+        publishing {
+            publications {
+                // Creates a Maven publication called "release".
+                release(MavenPublication) {
+                    from components.release
+                    groupId = group_id
+                    artifactId = artifact_id
+                    version = version_name
+                }
             }
         }
     }
