--- a/common-library/build.gradle
+++ b/common-library/build.gradle
@@ -7,16 +7,13 @@ apply from: 'publish_config.gradle'
 group = group_id
 
 
-//if(uploadto == "github"){
-//    apply from: 'publish_github.gradle'
-//}else if(uploadto == "mavenCentral"){
-//    apply from: 'publish_maven.gradle'
-//}else if(uploadto == "jitpack"){
-//
-//}
-//else {
-//    throw new Exception("uploadto invalid.github or mavenCentral")
-//}
+if(uploadto == "github"){
+    apply from: 'publish_github.gradle'
+}else if(uploadto == "mavenCentral"){
+    apply from: 'publish_maven.gradle'
+} else {
+    throw new Exception("uploadto invalid.github or mavenCentral")
+}
 
 
 android {
@@ -51,18 +48,4 @@ dependencies {
     compileOnly "androidx.core:core-ktx:$core_ktx_version"
     compileOnly "androidx.appcompat:appcompat:$appcompat_version"
     compileOnly "androidx.recyclerview:recyclerview:$recycler_view_version"
-}
-
-afterEvaluate {
-    publishing {
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                from components.release
-                groupId = group_id
-                artifactId = artifact_id
-                version = version_name
-            }
-        }
-    }
 }
